# simple_etl

./: .gitignore  .pre-commit-config.yaml  .tool-versions  CODEOWNERS  README.md  __init__.py  pyproject.toml
.github/workflows/: code-quality.yml  run_tests.yml
.trunk/: trunk.yaml
src/: __init__.py
src/configs/: my_log.py
src/extract/: extract_mongodb.py  extract_postgres.py  postgres.py
src/extract/interface/: extract.py  extract_interface.py
src/load/: load_postgres.py  postgres.py
src/load/interface/: load.py  load_interface.py
src/pipeline/: mongo_to_postgres.py
src/pipeline/interface/: pipeline_interface.py
src/transform/: transform_to_postgres.py
src/transform/interface/: transform_interface.py
src/utils/ELK stack/: install.md
src/utils/extract/: extract_mongodb.py  extract_postgres.py
src/utils/interfaces/: extract_interface.py  load_interface.py  my_log.py  pipeline_interface.py  transform_interface.py
src/utils/load/: load_postgres.py
src/utils/transform/: transform_to_postgres.py
tests/: __init__.py  docker-compose.yaml  extract_postgres.py  test_extract_mongodb.py  test_extract_postgres.py  test_load_interface.py  test_load_postgres.py  test_pipeline_mongo_postgres.py  test_transform_interface.py  test_transform_postgres.py
tests/json/: intents.json  ltr.json
tests/mongodb/: Dockerfile  init-mongo.js  populate_semi_estructured.py
tests/postgres/: Dockerfile  extract_postgres.py  fixture_postgres.py  init.sql
