[tool.poetry]
name = "simple-etl"
version = "0.1.0"
description = "A simple tool to help etl processes"
authors = ["arthurpieri <git@arthurpieri.com>"]
license = "Apache v2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
unidecode = "^1.3.6"
psycopg2-binary = "^2.9.6"
pytz = "^2023.3"
pymongo = "^4.5.0"
pytest-mock = "^3.11.1"

[tool.poetry.group.code_quality.dependencies]
black = "^23.7.0"
pylint = "^2.17.4"
pre-commit = "^3.3.3"
sqlfluff = "^2.1.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"
pytest = "^7.4.0"
py = "^1.11.0"
pluggy = "^1.2.0"
pytest-cov = "^4.1.0"

[tool.pylint.messages_control]
max-attributes=9
disable = [
  "bare-except",
  "broad-except",
  "missing-module-docstring",
  "fixme",
]

[tool.pylint.BASIC]
good-names= [
  "df",
  "db",
  "dt",
  "id",
  "i",
  "j",
  "MockSnowflakeHook",
]

[tool.sqlfluff.core]
dialect = "postgres"
templater = "jinja"
sql_file_exts = ".sql,.sql.j2,.dml,.ddl"
max_line_length = 127

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
